[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game/Screens/Levels/LevelObjects/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/SoundEffects/Electrocuted.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/SoundEffects/Dash.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/SoundEffects/Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/SoundEffects/PickCoin.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Images/Character/Character.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Game/AudioController/SoundEffects.gd" type="Script" id=7]
[ext_resource path="res://Game/Screens/Levels/LevelObjects/Player/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/Screens/ResponsiveControl.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "EnterLevel"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 360.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Curtain/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.3, 1.3 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Curtain/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 0.784314, 1, 1, 1, 0 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.5
height = 2.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="Curtain" type="CanvasLayer" parent="."]
layer = 4

[node name="ColorRect" type="ColorRect" parent="Curtain"]
margin_right = 256.0
margin_bottom = 144.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="."]

[node name="JumpPressedDelay" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="CoyoteTime" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.12
one_shot = true

[node name="DashDuration" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Audio" type="Node" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="Jump" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )
script = ExtResource( 7 )

[node name="Electrocuted" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 2 )
script = ExtResource( 7 )

[node name="Dash" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 3 )
script = ExtResource( 7 )

[node name="PickCoin" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 5 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnterLevel = SubResource( 1 )
anims/EnterPortal = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.8, 0.8 )

[node name="DashParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
speed_scale = 2.0
local_coords = false
draw_order = 1
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 6 )
animation = "Idle"
frame = 13
playing = true

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 0, -16 )
rotating = true
current = true
zoom = Vector2( 1.3, 1.3 )
process_mode = 0
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 6.0

[connection signal="timeout" from="Timers/DashDuration" to="." method="_on_DashDuration_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
